INCLUDE_DIRECTORIES(
  ${PARADEVS_LEARNING_BINARY_DIR}/src
  ${PARADEVS_LEARNING_SOURCE_DIR}/src
  ${PARADEVS_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${LIBXML_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${LIBXML_LIBRARY_DIRS}
  ${Boost_LIBRARY_DIRS})

SET(SOURCE_HPP HMM.hpp Tables.hpp LogProbs.hpp)

SET(SOURCE_CPP main.cpp HMM.cpp Tables.cpp LogProbs.cpp)

ADD_EXECUTABLE(paradevs-learning ${SOURCE_HPP} ${SOURCE_CPP})
SET_TARGET_PROPERTIES(paradevs-learning PROPERTIES ${PARADEVS_LEARNING_APP_PROPERTIES})

TARGET_LINK_LIBRARIES(paradevs-learning
  ${Boost_SYSTEM_LIBRARY}
  ${Boost_TIMER_LIBRARY})

INSTALL(TARGETS paradevs-learning DESTINATION bin)